--- a/dashboard.html
+++ b/dashboard.html
@@ -4,57 +4,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Dashboard | Finance Point</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Urbanist:wght@400;600&display=swap" rel="stylesheet">
   <style>
-    :root {
-      --bg-overlay: rgba(0, 0, 0, 0.6);
-      --text-color: #fff;
-      --highlight: #ffd700;
-      --card-bg: rgba(255, 255, 255, 0.1);
-    }
-    body.light-mode {
-      --bg-overlay: rgba(255, 255, 255, 0.8);
-      --text-color: #121212;
-      --highlight: #e0a600;
-      --card-bg: rgba(0, 0, 0, 0.05);
-    }* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: 'Quicksand', sans-serif;
-}
-
-body {
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: 'Urbanist', sans-serif;
+    }body {
   min-height: 100vh;
-  color: var(--text-color);
+  color: #fff;
   background: url('https://images.unsplash.com/photo-1565514156637-15ec02d12174?auto=format&fit=crop&w=1400&q=80') no-repeat center/cover fixed;
   backdrop-filter: blur(4px);
-  transition: background 0.3s, color 0.3s;
 }
 
 .overlay {
   position: fixed;
   inset: 0;
-  background: var(--bg-overlay);
+  background: rgba(0, 0, 0, 0.7);
   z-index: 0;
-}
-
-.toggle-mode {
-  position: fixed;
-  top: 12px;
-  right: 12px;
-  z-index: 10;
-  background: var(--highlight);
-  color: #000;
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 18px;
-  cursor: pointer;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
 }
 
 .sidebar {
@@ -63,14 +31,14 @@ body {
   left: 0;
   height: 100vh;
   width: 220px;
-  background: var(--bg-overlay);
+  background: rgba(0, 0, 0, 0.85);
   padding: 20px 10px;
   z-index: 5;
   overflow-y: auto;
 }
 
 .sidebar h2 {
-  color: var(--highlight);
+  color: #ffd700;
   font-size: 22px;
   text-align: center;
   margin-bottom: 30px;
@@ -88,9 +56,8 @@ body {
   transition: 0.3s;
 }
 
-.sidebar a:hover,
-.sidebar a.active {
-  background: var(--highlight);
+.sidebar a:hover, .sidebar a.active {
+  background: #ffd700;
   color: #000;
   font-weight: bold;
 }
@@ -98,52 +65,74 @@ body {
 .main {
   margin-left: 220px;
   padding: 2rem;
+  flex: 1;
   z-index: 5;
 }
 
-.header h1 {
-  font-size: 26px;
-  color: var(--highlight);
-  margin-bottom: 20px;
-}
-
-.horizontal-nav {
-  display: flex;
-  overflow-x: auto;
-  gap: 1rem;
-  padding: 10px;
-  border-bottom: 2px solid var(--highlight);
-  margin-bottom: 2rem;
-}
-
-.horizontal-nav a {
-  color: var(--text-color);
-  text-decoration: none;
-  font-weight: 600;
-  padding: 8px 14px;
+.header {
+  background: rgba(255,255,255,0.05);
+  padding: 20px;
   border-radius: 10px;
-  transition: 0.3s;
-  white-space: nowrap;
+  margin-bottom: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  animation: fadeIn 1s ease-out;
 }
 
-.horizontal-nav a:hover,
-.horizontal-nav a.active {
-  background: var(--highlight);
+.header h1 {
+  font-size: 24px;
+  color: #ffd700;
+}
+
+.search-bar input {
+  padding: 10px;
+  border-radius: 20px;
+  border: none;
+  outline: none;
+  width: 200px;
+  background: rgba(255,255,255,0.2);
+  color: #fff;
+}
+
+.quick-nav {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
+  gap: 1rem;
+  margin-bottom: 30px;
+  animation: slideIn 1s ease-out;
+}
+
+.quick-nav a {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
+  background: rgba(255, 255, 255, 0.08);
+  border-radius: 1rem;
+  padding: 1.5rem;
+  color: #fff;
+  font-weight: 600;
+  text-align: center;
+  transition: 0.3s;
+}
+
+.quick-nav a:hover {
+  background: #ffd700;
   color: #000;
 }
 
-.facts,
-.notifications {
-  background: var(--card-bg);
+.facts, .notifications {
+  background: rgba(255,255,255,0.08);
   padding: 20px;
   border-radius: 10px;
   margin-bottom: 1.5rem;
-  animation: fadeIn 1s ease;
+  animation: fadeIn 1.2s ease-in;
 }
 
-.facts h2,
-.notifications h2 {
-  color: var(--highlight);
+.facts h2, .notifications h2 {
+  color: #ffd700;
   margin-bottom: 10px;
 }
 
@@ -151,52 +140,41 @@ body {
   position: fixed;
   top: 20px;
   right: 20px;
-  background: var(--highlight);
+  background: #ffd700;
   color: #000;
   padding: 1rem 1.5rem;
   border-radius: 1rem;
-  box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
-  animation: slideIn 1s ease-out;
+  box-shadow: 0 0 15px rgba(0,0,0,0.3);
+  animation: slideDown 1s ease-out;
   z-index: 100;
 }
 
 @keyframes fadeIn {
-  from {
-    opacity: 0;
-    transform: translateY(10px);
-  }
-  to {
-    opacity: 1;
-    transform: translateY(0);
-  }
+  from { opacity: 0; }
+  to { opacity: 1; }
 }
 
 @keyframes slideIn {
-  from {
-    opacity: 0;
-    transform: translateY(-20px);
-  }
-  to {
-    opacity: 1;
-    transform: translateY(0);
-  }
+  from { transform: translateY(40px); opacity: 0; }
+  to { transform: translateY(0); opacity: 1; }
+}
+
+@keyframes slideDown {
+  from { transform: translateY(-20px); opacity: 0; }
+  to { transform: translateY(0); opacity: 1; }
 }
 
 @media (max-width: 768px) {
-  .sidebar {
-    display: none;
-  }
-  .main {
-    margin-left: 0;
-    padding: 1rem;
-  }
+  .sidebar { display: none; }
+  .main { margin-left: 0; padding: 1rem; }
 }
 
   </style>
 </head>
 <body>
-  <div class="overlay"></div>
-  <div class="toggle-mode" onclick="toggleMode()"><i class="fas fa-moon"></i></div>  <div class="sidebar">
+  <div class="overlay"></div>  <div class="notification-popup">
+    ✅ You are viewing the latest student updates.
+  </div>  <div class="sidebar">
     <h2>Finance Point</h2>
     <a href="dashboard.html" class="active"><i class="fas fa-home"></i> Dashboard</a>
     <a href="downloads.html"><i class="fas fa-file-download"></i> Downloads</a>
@@ -210,14 +188,17 @@ body {
   </div>  <div class="main">
     <div class="header">
       <h1>👋 Welcome to the Finance Point Dashboard</h1>
-    </div><div class="horizontal-nav">
-  <a href="downloads.html">Downloads</a>
-  <a href="events.html">Events</a>
-  <a href="news.html">News</a>
-  <a href="executives.html">Executives</a>
-  <a href="lostandfound.html">Lost & Found</a>
-  <a href="birthday.html">Birthday Wall</a>
-  <a href="study.html">Study Resources</a>
+      <div class="search-bar">
+        <input type="text" placeholder="Search features..." onkeyup="searchFeatures(this.value)">
+      </div>
+    </div><div class="quick-nav" id="navLinks">
+  <a href="downloads.html"><i class="fas fa-file-download fa-2x"></i><br>Downloads</a>
+  <a href="events.html"><i class="fas fa-calendar fa-2x"></i><br>Events</a>
+  <a href="news.html"><i class="fas fa-bullhorn fa-2x"></i><br>News</a>
+  <a href="executives.html"><i class="fas fa-users fa-2x"></i><br>Executives</a>
+  <a href="lostandfound.html"><i class="fas fa-search fa-2x"></i><br>Lost & Found</a>
+  <a href="birthday.html"><i class="fas fa-birthday-cake fa-2x"></i><br>Birthday Wall</a>
+  <a href="study.html"><i class="fas fa-book fa-2x"></i><br>Study Resources</a>
 </div>
 
 <div class="facts">
@@ -238,16 +219,13 @@ body {
   </ul>
 </div>
 
-  </div>  <div class="notification-popup" id="popup">
-    ✅ You are viewing the latest student updates.
   </div>  <script>
-    function toggleMode() {
-      document.body.classList.toggle('light-mode');
+    function searchFeatures(term) {
+      const links = document.querySelectorAll('#navLinks a');
+      links.forEach(link => {
+        const text = link.textContent.toLowerCase();
+        link.style.display = text.includes(term.toLowerCase()) ? 'flex' : 'none';
+      });
     }
-
-    setTimeout(() => {
-      const popup = document.getElementById('popup');
-      if (popup) popup.style.display = 'none';
-    }, 5000);
   </script></body>
 </html>
