--- a/dashboard.html
+++ b/dashboard.html
@@ -20,6 +20,13 @@
         no-repeat center/cover fixed;
       backdrop-filter: blur(4px);
       position: relative;
+      transition: background 0.3s, color 0.3s;
+    }
+
+    body.light-mode {
+      color: #121212;
+      background: #f0f0f0;
+      backdrop-filter: none;
     }
 
     .overlay {
@@ -27,6 +34,9 @@
       inset: 0;
       background: rgba(0,0,0,0.7);
       z-index: 0;
+    }
+    body.light-mode .overlay {
+      background: rgba(255,255,255,0.7);
     }
 
     .sidebar {
@@ -39,13 +49,20 @@
       padding: 20px 10px;
       z-index: 5;
       overflow-y: auto;
+      transition: background 0.3s, color 0.3s;
     }
-
+    body.light-mode .sidebar {
+      background: rgba(240, 240, 240, 0.9);
+    }
     .sidebar h2 {
       color: #ffd700;
       font-size: 22px;
       text-align: center;
       margin-bottom: 30px;
+      transition: color 0.3s;
+    }
+    body.light-mode .sidebar h2 {
+      color: #b8860b;
     }
 
     .sidebar a {
@@ -57,9 +74,11 @@
       padding: 12px 20px;
       margin: 8px 0;
       border-radius: 5px;
-      transition: 0.3s;
+      transition: background 0.3s, color 0.3s;
     }
-
+    body.light-mode .sidebar a {
+      color: #333;
+    }
     .sidebar a:hover, .sidebar a.active {
       background: #ffd700;
       color: #000;
@@ -70,6 +89,10 @@
       margin-left: 220px;
       padding: 2rem;
       z-index: 5;
+      transition: color 0.3s;
+    }
+    body.light-mode .main {
+      color: #121212;
     }
 
     .header {
@@ -77,11 +100,19 @@
       padding: 20px;
       border-radius: 10px;
       margin-bottom: 20px;
+      transition: background 0.3s;
+    }
+    body.light-mode .header {
+      background: rgba(0,0,0,0.05);
     }
 
     .header h1 {
       font-size: 24px;
       color: #ffd700;
+      transition: color 0.3s;
+    }
+    body.light-mode .header h1 {
+      color: #b8860b;
     }
 
     .quick-nav {
@@ -99,9 +130,12 @@
       color: #fff;
       text-decoration: none;
       font-weight: 500;
-      transition: 0.3s;
+      transition: background 0.3s, color 0.3s;
     }
-
+    body.light-mode .quick-nav a {
+      background: rgba(0,0,0,0.05);
+      color: #121212;
+    }
     .quick-nav a:hover {
       background: #ffd700;
       color: #000;
@@ -112,11 +146,20 @@
       padding: 20px;
       border-radius: 10px;
       margin-bottom: 1.5rem;
+      transition: background 0.3s, color 0.3s;
+    }
+    body.light-mode .facts, body.light-mode .notifications {
+      background: rgba(0,0,0,0.05);
+      color: #121212;
     }
 
     .facts h2, .notifications h2 {
       color: #ffd700;
       margin-bottom: 10px;
+      transition: color 0.3s;
+    }
+    body.light-mode .facts h2, body.light-mode .notifications h2 {
+      color: #b8860b;
     }
 
     .facts ul, .notifications ul {
@@ -124,17 +167,26 @@
       padding-left: 20px;
     }
 
-    .notification-popup {
+    .toggle-mode {
       position: fixed;
-      top: 15px;
-      right: 20px;
-      background: #ffd700;
-      color: #000;
-      padding: 10px 20px;
-      border-radius: 10px;
-      font-weight: bold;
-      box-shadow: 0 0 10px rgba(0,0,0,0.5);
+      top: 12px;
+      right: 12px;
       z-index: 20;
+      background: rgba(255, 215, 0, 0.9);
+      color: #000;
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 18px;
+      cursor: pointer;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.3);
+      transition: background 0.3s;
+    }
+    .toggle-mode:hover {
+      background: #ffd700;
     }
 
     @media (max-width: 768px) {
@@ -150,6 +202,11 @@
 </head>
 <body>
   <div class="overlay"></div>
+  
+  <div class="toggle-mode" id="modeToggle" title="Toggle Light/Dark Mode">
+    <i class="fas fa-moon"></i>
+  </div>
+
   <div class="sidebar">
     <h2>Finance Point</h2>
     <a href="dashboard.html" class="active"><i class="fas fa-home"></i> Dashboard</a>
@@ -162,10 +219,12 @@
     <a href="study.html"><i class="fas fa-book"></i> Study Resources</a>
     <a href="contact.html"><i class="fas fa-phone"></i> Contact</a>
   </div>
+
   <div class="main">
     <div class="header">
       <h1>👋 Welcome to the Finance Point Dashboard</h1>
     </div>
+
     <div class="quick-nav">
       <a href="downloads.html"><i class="fas fa-file-download fa-2x"></i><br>Downloads</a>
       <a href="events.html"><i class="fas fa-calendar fa-2x"></i><br>Events</a>
@@ -175,6 +234,7 @@
       <a href="birthday.html"><i class="fas fa-birthday-cake fa-2x"></i><br>Birthday Wall</a>
       <a href="study.html"><i class="fas fa-book fa-2x"></i><br>Study Resources</a>
     </div>
+
     <div class="facts">
       <h2>💡 Finance Facts</h2>
       <ul>
@@ -183,6 +243,7 @@
         <li>Capital budgeting helps determine the viability of long-term financial investments.</li>
       </ul>
     </div>
+
     <div class="notifications">
       <h2>📚 Academic Tips</h2>
       <ul>
@@ -192,12 +253,20 @@
       </ul>
     </div>
   </div>
-  <div class="notification-popup" id="notify">✅ You are viewing the latest updates!</div>
+
   <script>
-    setTimeout(() => {
-      const popup = document.getElementById('notify');
-      if (popup) popup.style.display = 'none';
-    }, 3000);
+    const toggleBtn = document.getElementById('modeToggle');
+    toggleBtn.addEventListener('click', () => {
+      document.body.classList.toggle('light-mode');
+      const icon = toggleBtn.querySelector('i');
+      if(document.body.classList.contains('light-mode')) {
+        icon.classList.remove('fa-moon');
+        icon.classList.add('fa-sun');
+      } else {
+        icon.classList.remove('fa-sun');
+        icon.classList.add('fa-moon');
+      }
+    });
   </script>
 </body>
 </html>
